# TinyAudioLink

./: .EditorConfig  .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.adoc  TinyAudioLink.code-workspace  cm7.txt
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
boards/teensy4/: CMakeLists.txt
boards/teensy4/include/: board.h  register.hpp  string.h
boards/teensy4/include/arm/: cm7.hpp
boards/teensy4/include/arm/cm7/: cm7.hpp
boards/teensy4/include/imxrt1060/: gpio.hpp  iomuxc.hpp  nvic.hpp
boards/teensy4/include/nxp/imxrt1060/: imxrt1060.h  nvic.hpp
boards/teensy4/linker/: layout.ld
boards/teensy4/source/: boot.cpp  boot.h  bootloader.cpp  bootloader.hpp  cstring  memcpy.impl  memset.impl  reset.c  reset.h
boards/teensy4/source/arm/cm7/: cache.cpp  fpu.cpp
boards/teensy4/source/imxrt1060/: bitmask.hpp  bootdata.cpp  bootdata.hpp  cm7.hpp  imagevectortable.cpp  imagevectortable.hpp  iomuxc.hpp  nvic.cpp  nvic.hpp  register.hpp
boards/teensy4/source/kinetis/: flashloader.hpp
boards/teensy4/source/nxp/: nxp.hpp
boards/teensy4/source/nxp/imxrt1060/: bootdata.cpp  deviceconfigurationdata.cpp  imagevectortable.cpp  imagevectortable.hpp  imxrt1060.s  nvic.cpp
boards/teensy4/source/std/: string.cpp
cmake/generators/: ninja.cmake
cmake/modules/platform/: Teensy4.1.cmake
cmake/toolchains/: llvm-arm.cmake  llvm.cmake
extra/: copyright.js
platform/boards/teensy4/: CMakeLists.txt  info.md  threading.txt
platform/boards/teensy4/include/: board.h  board.h.in  boot.h
platform/boards/teensy4/linker/: layout.ld
platform/boards/teensy4/source/: boot.cpp  flash.cpp  libc.c  main.cpp
platform/chips/imxrt1060/: CMakeLists.txt
platform/chips/imxrt1060/include/: chip.h
platform/chips/imxrt1060/include/nxp/: kinetis.hpp  kinetisflashloader.hpp  nxp.hpp
platform/chips/imxrt1060/include/nxp/imxrt1060/: bootdata.hpp  deviceconfigurationdata.hpp  gpio.hpp  imagevectortable.hpp  imxrt1060.h  imxrt1060.hpp  iomuxc.hpp  nvic.hpp  reset.h
platform/chips/imxrt1060/source/nxp/imxrt1060/: bootdata.cpp  deviceconfigurationdata.cpp  imagevectortable.cpp  nvic.cpp  reset.c
platform/cpus/arm-cortex-m7/: CMakeLists.txt
platform/cpus/arm-cortex-m7/include/: register.hpp
platform/cpus/arm-cortex-m7/include/arm/cm7/: cache.hpp  cm7.h  cm7.hpp  cm7.s  fpu.hpp  nvic.hpp  systick.hpp
platform/cpus/arm-cortex-m7/source/arm/cm7/: cache.cpp  cm7.s  fpu.cpp  nvic.cpp  systick.cpp
platform/cpus/arm-v7/: CMakeLists.txt
platform/cpus/arm-v7/include/: atomic.hpp  register.hpp
platform/cpus/arm-v7/include/arm/v7/: cache.hpp  fpu.hpp  nvic.hpp  systick.hpp  v7.h  v7.hpp
platform/cpus/arm-v7/source/: atomic.cpp
platform/cpus/arm-v7/source/arm/v7/: cache.cpp  fpu.cpp  nvic.cpp  systick.cpp  v7.cpp  v7.s
source/: main.cpp
source/teensy41/: bootloader.cpp  layout.ld
source/teensy41/imxrt1060/: bootdata.hpp  imagevectortable.hpp
source/teensy41/kinetis/: flashloader.hpp
source/teensy41/std/: inttypes.h
